2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* Image.h:
	* BrowserWindow.h:
	* X3DBaseInterface.h:
	* X3DUserInterface.h:
	* History.cpp:
	* BrowserWindow.cpp:
	* X3DUserInterface.cpp:
	* X3DBrowserWindow.h:
	* X3DBrowserWindow.cpp:
	* ViewpointMenuItem.cpp:
	* X3DConsoleUI.h:
	* OutlineEditor.h:
	* HistoryEditor.h:
	* OutlineTreeView.h:
	* X3DConsoleUI.cpp:
	* Configuration.cpp:
	* HistoryEditor.cpp:
	* OutlineEditor.cpp:
	* OutlineTreeModel.h:
	* OutlineSelection.h:
	* ViewpointEditor.h:
	* OutlineTreeView.cpp:
	* OutlineSelection.cpp:
	* OutlineTreeModel.cpp:
	* X3DHistoryEditorUI.h:
	* X3DOutlineEditorUI.h:
	* ViewpointEditor.cpp:
	* MotionBlurEditor.h:
	* X3DBrowserWindowUI.h:
	* X3DBrowserWindowUI.cpp:
	* X3DViewpointEditorUI.h:
	* X3DHistoryEditorUI.cpp:
	* X3DOutlineEditorUI.cpp:
	* MotionBlurEditor.cpp:
	* X3DMotionBlurEditorUI.h:
	* X3DViewpointEditorUI.cpp:
	* X3DMotionBlurEditorUI.cpp: 

2013-07-10  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewpointEditor.h:
	* ViewpointEditor.cpp: 

2013-07-09  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* X3DBaseInterface.h:
	* OutlineTreeView.h:
	* OutlineEditor.cpp:
	* OutlineTreeView.cpp: 

2013-07-07  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* Makefile.am:
	* X3DBaseInterface.h:
	* BrowserWindow.ui:
	* X3DBaseInterface.cpp:
	* X3DBrowserWindow.cpp:
	* OutlineTreeModel.cpp:
	* OutlineSelection.cpp:
	* ViewpointEditor.cpp: 

2013-07-06  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserWindow.cpp: 

2013-07-06  Holger Seelig  <holger.seelig@yahoo.de>

	* History.cpp:
	* HistoryEditor.cpp: 

2013-07-01  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserWindow.cpp: 

2013-06-29  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserWindow.cpp: 

2013-06-26  Holger Seelig  <holger.seelig@yahoo.de>

	* home.wrl:
	* Colors.wrl:
	* red.orange.yellow.wrl: 

2013-06-25  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserWindow.cpp: 
