@@ -1,5 +1,10 @@
 2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* date.wrl:
+	* gears.wrl: 
+
+2013-07-11  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* main.cpp:
 	* Image.h:
 	* BrowserWindow.h:
